<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_payNow"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorBg"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/payment_method"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_cod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:visibility="visible">


                    <RadioButton
                        android:id="@+id/radio_cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:text="@string/pay_with_cash"
                        android:textIsSelectable="true">


                    </RadioButton>

                    <ImageView

                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_cod" />

                    <TextView
                        android:id="@+id/txt_cash_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radio_cash"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="5dp"

                        android:includeFontPadding="false"
                        android:text=""

                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"
                        android:visibility="gone" />


                </RelativeLayout>


            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorSepGray" />

            <RelativeLayout
                android:id="@+id/rl_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"

                android:layout_marginBottom="14dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/personal_info"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tv_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_13"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/personal_info_temp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorSepGray" />

            <RelativeLayout
                android:id="@+id/rl_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_address_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/address_address"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorSepGray" />


            <RelativeLayout
                android:id="@+id/rl_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="7dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/cod_charges"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="7dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="$ 4"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="7dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/shipping_fee"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="7dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="14dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/subtotal"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="14dp"
                    android:alpha="0.4"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_payNow"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="5dp"
                    android:includeFontPadding="false"
                    android:text="@string/total"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:includeFontPadding="false"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_payNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/add_button"
        android:text="@string/submit_order"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <include
        android:id="@+id/ll_layout_progressbar"
        layout="@layout/progress_layout"
        android:visibility="gone" />

</RelativeLayout>