<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeToolbar" />


    <RelativeLayout
        android:id="@+id/rl_fullCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_button"
        android:layout_below="@+id/toolbar">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cart_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:isScrollContainer="false"
                    android:nestedScrollingEnabled="false" />

                <RelativeLayout
                    android:id="@+id/rl_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rv_cart_items">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="7dp"
                        android:alpha="0.4"

                        android:gravity="center_vertical"
                        android:text="@string/shipping_fee"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_shipping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="7dp"
                        android:alpha="0.4"

                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_1">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="14dp"
                        android:alpha="0.4"

                        android:gravity="center_vertical"
                        android:text="@string/subtotal"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="14dp"
                        android:alpha="0.4"

                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_2"
                    android:paddingBottom="30dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"

                        android:text="@string/total_price"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView1"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                </RelativeLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_button"
        android:layout_below="@+id/toolbar"
        android:visibility="visible">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:alpha="0.2"
            android:foregroundTint="@color/colorBlack"
            android:src="@drawable/empty_cart_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"

            android:gravity="center"
            android:maxLines="2"
            android:text="@string/your_cart_is_empty"
            android:textColor="@color/colorBlack"

            android:textSize="18sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_above"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_shop_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_continue_rounded"

            android:includeFontPadding="false"
            android:text="@string/continue_shopping"

            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_addCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/add_button"

            android:includeFontPadding="false"

            android:text="@string/checkout_now"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


    </LinearLayout>

    <include
        android:id="@+id/ll_layout_progressbar"
        layout="@layout/progress_layout"
        android:visibility="gone" />

</RelativeLayout>