<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_cart"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="0.9" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_rounded"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_toLeftOf="@+id/text_price"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingTop="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/text_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_detail"
                    android:layout_alignTop="@+id/ll_counter"
                    android:layout_alignBottom="@+id/ll_counter"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/qty"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/ll_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_detail"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/cardView"
                    android:gravity="center_vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/img_minus"
                        android:layout_width="@dimen/minus_plus_width_height"
                        android:layout_height="@dimen/minus_plus_width_height"
                        android:background="@drawable/counter_circle"
                        android:padding="8dp"
                        android:src="@drawable/minus" />

                    <TextView
                        android:id="@+id/tv_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center"

                        android:maxWidth="80dp"
                        android:maxLength="99"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="@color/colorBlack"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/img_plus"
                        android:layout_width="@dimen/minus_plus_width_height"
                        android:layout_height="@dimen/minus_plus_width_height"
                        android:background="@drawable/counter_circle"
                        android:padding="10dp"
                        android:src="@drawable/plus" />

                </LinearLayout>

                <View
                    android:id="@+id/sep1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ll_counter"
                    android:layout_margin="10dp"
                    android:background="@color/colorBg" />


                <TextView

                    android:id="@+id/text_calculation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sep1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="right"
                    android:text="0 * 0"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/sep2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/text_calculation"
                    android:layout_margin="10dp"
                    android:background="@color/colorBg" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sep2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="right"
                    android:text="@string/price"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_price_calculation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sep2"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorRoundDetail">

        <Button
            android:id="@+id/btn_addCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/add_button"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/nodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Empty"
        android:textColor="@color/colorBlack"
        android:visibility="gone" />

    <include
        android:id="@+id/ll_layout_progressbar"
        layout="@layout/progress_layout"
        android:visibility="gone" />

</RelativeLayout>